Revise README with enhanced details and structure
Updated README to include additional details on usage, requirements, and limitations.